fixed inactive/active state menu items alignment on mobile

--- a/src/components/mega_main_navigation/css/component.scss
+++ b/src/components/mega_main_navigation/css/component.scss
@@ -33,7 +33,7 @@
                 box-shadow: none;
                 line-height: 32px;
                 background-color: transparent;
-                // display: flex;
+                display: flex;
             }
 
             &:hover{
@@ -350,8 +350,6 @@
                             // border-top: solid $QLD-border-width-thin  var(--QLD-color-light-border);
                             border-bottom: none;
                             font-weight: bold;
-
-                            
                         }
 
                         .qld__icon{
@@ -385,6 +383,7 @@
                         width: 100%;
                         display: block;
                         font-weight: bold;
+                        border-left: solid 4px transparent;
                     }
                 }
 
